network: Check variable before dereferencing

It seems that the error variable may be NULL at this point in
some cases as per the bug reports, but I don't really have any
idea why. Let's check the error variable before dereferencing
and see if it helps to reduce the number of bug reports...

https://bugzilla.gnome.org/show_bug.cgi?id=777737